security(llm): enforce READ_ONLY JDBC mode, block table functions, implement real Vector RAG, and remove Gradle build drift